--- a/space-tourism-website/src/app/pages/destination/destination.component.html
+++ b/space-tourism-website/src/app/pages/destination/destination.component.html
@@ -1,68 +1,58 @@
-<div class="absolute inset-0 h-[100vh] bg-[url('/assets/destination/background-destination-mobile.jpg')] bg-cover bg-no-repeat bg-center md:bg-[url('/assets/destination/background-destination-tablet.jpg')] lg:bg-[url('/assets/destination/background-destination-desktop.jpg')] z-[-10]">
-</div>
+<div
+  class="fixed inset-0  bg-[url('/assets/destination/background-destination-mobile.jpg')] bg-cover bg-no-repeat bg-center md:bg-[url('/assets/destination/background-destination-tablet.jpg')] lg:bg-[url('/assets/destination/background-destination-desktop.jpg')] z-[-10]"
+></div>
 
-<div>
-   01 Pick your destination
+<div class=" text-center my-5">
 
-  Moon
-  Mars
-  Europa
-  Titan
+  <h2
+    class="uppercase font-barlow-condensed leading-[33.6px] tracking-[4px] text-[15px]"
+  >
+    01 Pick your destination
+  </h2>
 
-  Moon
+  <img
+    [src]="selectedDestination.images.webp"
+    alt="{{ selectedDestination.name }} image"
+    class="w-40 mx-auto my-16"
+  />
 
-  See our planet as you’ve never seen it before. A perfect relaxing trip away to help
-  regain perspective and come back refreshed. While you’re there, take in some history
-  by visiting the Luna 2 and Apollo 11 landing sites.
+  <ul class="flex justify-center items-center gap-4 my-10 font-barlow-condensed ">
+    @for (destination of destinations; track destination.name) {
+    <li
+      class="relative uppercase tracking-[4px] text-[14px] cursor-pointer transition-colors duration-300 text-white after:content-[''] after:absolute after:left-0 after:bottom-[-15px] after:w-full after:transition-all after:duration-300"
+      [ngClass]="{
+        'after:h-[3px] after:bg-white':
+          selectedDestination.name === destination.name,
+        'hover:after:h-[2px] hover:after:bg-gray-400 after:h-0':
+          selectedDestination.name !== destination.name
+      }"
+      (click)="selectDestination(destination.name)"
+    >
+      {{ destination.name }}
+    </li>
+    }
+  </ul>
 
-  Avg. distance
-  384,400 km
-
-  Est. travel time
-  3 days
-
-
-
-  Mars
-
-  Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,
-  the tallest planetary mountain in our solar system. It’s two and a half times
-  the size of Everest!
-
-  Avg. distance
-  225 mil. km
-
-  Est. travel time
-  9 months
+  <p class="text-[56px] uppercase font-bellefair  text-white ">
+    {{ selectedDestination.name }}
+  </p>
 
 
+  <p class="leading-[1.8] text-[14px] mx-auto w-[300px]">
+    {{ selectedDestination.description }}
+  </p>
 
-
-  Europa
-
-  The smallest of the four Galilean moons orbiting Jupiter, Europa is a
-  winter lover’s dream. With an icy surface, it’s perfect for a bit of
-  ice skating, curling, hockey, or simple relaxation in your snug
-  wintery cabin.
-
-  Avg. distance
-  628 mil. km
-
-  Est. travel time
-  3 years
+  <hr class="w-[80%] mx-auto border border-bluelight/30 my-5 " />
 
 
 
-   Titan
+      <p class="text-sm font-barlow-condensed tracking-[3px] uppercase mb-1">Avg. distance</p>
+      <p class="text-white text-3xl mb-6">{{ selectedDestination.distance }}</p>
 
-  The only moon known to have a dense atmosphere other than Earth, Titan
-  is a home away from home (just a few hundred degrees colder!). As a
-  bonus, you get striking views of the Rings of Saturn.
+      <p class="text-sm font-barlow-condensed tracking-[3px] uppercase mb-1">Est. travel time</p>
+      <p class="text-white text-3xl">{{ selectedDestination.travel }}</p>
 
-  Avg. distance
-  1.6 bil. km
 
-  Est. travel time
-  7 years
+
 
 </div>
