--- a/space-tourism-website/src/app/pages/technology/technology.component.html
+++ b/space-tourism-website/src/app/pages/technology/technology.component.html
@@ -1,40 +1,51 @@
-<div class="absolute inset-0 h-[100vh] bg-[url('/assets/technology/background-technology-mobile.jpg')] bg-cover bg-no-repeat bg-center md:bg-[url('/assets/technology/background-technology-tablet.jpg')] lg:bg-[url('/assets/technology/background-technology-desktop.jpg')] z-[-10]">
+<div class="fixed inset-0 h-[100vh] bg-[url('/assets/technology/background-technology-mobile.jpg')] bg-cover bg-no-repeat bg-center md:bg-[url('/assets/technology/background-technology-tablet.jpg')] lg:bg-[url('/assets/technology/background-technology-desktop.jpg')] z-[-10]">
 
 </div>
 
-<div>
-   03 Space launch 101
+<div class="text-center my-5">
+  <h2 class="uppercase font-barlow-condensed leading-[33.6px] tracking-[4px] text-[15px]">
+    03 Space launch 101
+  </h2>
 
-  1
-  2
-  3
+  <div class="w-full ">
+    <img
+      [src]="selectedTech.images.portrait"
+      alt="{{ selectedTech.name }} image"
+      class=" mx-auto my-16 "
+    />
+  </div>
 
-  The terminology...
-  Launch vehicle
-
-  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a
-  payload from Earth's surface to space, usually to Earth orbit or beyond. Our
-  WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall,
-  it's quite an awe-inspiring sight on the launch pad!
-
-
-
-
-  The terminology...
-  Spaceport
-
-  A spaceport or cosmodrome is a site for launching (or receiving) spacecraft,
-  by analogy to the seaport for ships or airport for aircraft. Based in the
-  famous Cape Canaveral, our spaceport is ideally situated to take advantage
-  of the Earth’s rotation for launch.
+  <ul
+    class="flex justify-center items-center gap-4 font-barlow-condensed"
+  >
+    @for (tech of techs; track tech.name; let i = $index) {
+    <li
+      class="p-4 w-4 h-4 flex justify-center items-center rounded-full cursor-pointer transition-colors duration-300 border"
+      [ngClass]="{
+        'bg-white text-black': selectedTech.name === tech.name,
+        'border-gray-700 hover:border-white': selectedTech.name !== tech.name
+      }"
+      (click)="selectTech(tech.name)"
+    >
+      {{ i + 1 }}
+    </li>
+    }
+  </ul>
 
 
-  The terminology...
-  Space capsule
+  <p class="text-gray-500 text-xl uppercase mt-7 mb-2">
+    The terminology...
+  </p>
+  <p class="text-[20px] uppercase font-bellefair text-white mb-4">
+    {{ selectedTech.name }}
+  </p>
 
-  A space capsule is an often-crewed spacecraft that uses a blunt-body reentry
-  capsule to reenter the Earth's atmosphere without wings. Our capsule is where
-  you'll spend your time during the flight. It includes a space gym, cinema,
-  and plenty of other activities to keep you entertained.
+  <p class="leading-[1.8] text-[14px] mx-auto w-[320px]">
+    {{ selectedTech.description }}
+  </p>
+
+
+
+
 
 </div>
