--- a/space-tourism-website/src/app/shared/ui/header/header.component.html
+++ b/space-tourism-website/src/app/shared/ui/header/header.component.html
@@ -1,6 +1,9 @@
 <header class="flex justify-between items-center text-white px-6 py-4 w-full">
-  <div class="cursor-pointer  md:p-3" routerLink="/home">
+  <div class="cursor-pointer md:p-3" routerLink="/home">
     <img src="/assets/shared/logo.svg" alt="Space Tourism Logo" />
+  </div>
+
+  <div class="hidden lg:flex flex-1 border border-white/40   ">
   </div>
 
   <button class="cursor-pointer md:hidden" (click)="toogleNavbar()">
@@ -8,6 +11,7 @@
   </button>
 
   <app-navbar class="hidden md:flex md:gap-3"></app-navbar>
+
 </header>
 
 <!-- Navbar móvil -->
