space tourism fix responsive fix

--- a/space-tourism-website/src/app/pages/crew/crew.component.html
+++ b/space-tourism-website/src/app/pages/crew/crew.component.html
@@ -47,9 +47,9 @@
       <img
         [src]="selectedCrew.images.webp"
         alt="{{ selectedCrew.name }} image"
-        class="w-80 mx-auto my-5 md:w-100"
+        class="w-80 mx-auto my-5 md:w-100 lg:w-[400px]"
       />
-      <div class="absolute bottom-0 left-0 w-full h-20 bg-gradient-to-t from-black/80 to-transparent pointer-events-none"></div>
+      <div class="absolute bottom-0 left-0 w-full h-20 bg-gradient-to-t from-black/10 to-transparent pointer-events-none"></div>
 
     </div>
   </div>
