--- a/space-tourism-website/src/app/pages/destination/destination.component.html
+++ b/space-tourism-website/src/app/pages/destination/destination.component.html
@@ -15,12 +15,12 @@
       <img
         [src]="selectedDestination.images.webp"
         alt="{{ selectedDestination.name }} image"
-        class="w-40 mx-auto my-10 md:w-80 lg:w-120"
+        class="w-40 mx-auto my-10 md:w-80 lg:w-[450px]"
       />
 
     </div>
 
-    <div class="lg:flex-1">
+    <div class="lg:flex-1 flex flex-col justify-center items-center lg:items-start lg:justify-center">
       <ul
         class="flex justify-center items-center gap-4 my-7 font-barlow-condensed"
       >
@@ -44,13 +44,14 @@
         {{ selectedDestination.name }}
       </p>
 
-      <p class="leading-[1.8] text-[14px] mx-auto w-[300px] md:w-[460px]">
+      <p class="leading-[1.8] text-[14px] w-[300px] md:w-[460px] lg:text-left">
         {{ selectedDestination.description }}
       </p>
 
-      <hr class="w-[80%] mx-auto border border-bluelight/30 my-5" />
 
-      <div class="flex flex-col md:flex-row justify-between items-center mx-auto w-[300px] mb-6 md:w-[460px]">
+      <hr class="w-[80%] border border-bluelight/30 my-5 lg:w-[60%]" />
+
+      <div class="flex flex-col md:flex-row justify-between items-center w-[300px] mb-6 md:w-[460px] lg:text-left">
         <div>
           <p
             class="text-sm font-barlow-condensed tracking-[3px] uppercase mb-1"
