--- a/space-tourism-website/src/app/pages/home/home.component.html
+++ b/space-tourism-website/src/app/pages/home/home.component.html
@@ -2,37 +2,46 @@
   class="fixed inset-0 h-[100vh] bg-[url('/assets/home/background-home-mobile.jpg')] bg-no-repeat bg-cover bg-center md:bg-[url('/assets/home/background-home-tablet.jpg')] lg:bg-[url('/assets/home/background-home-desktop.jpg')] z-[-10]"
 ></div>
 
-<div class="text-center mt-5 md:mt-20">
-  <h2 class="uppercase font-barlow-condensed leading-[33.6px] tracking-[4px] text-[15px] md:text-[20px] ">So, you want to travel to</h2>
-  <h1 class="text-white text-[80px] uppercase font-bellefair md:text-[120px]">Space</h1>
-
-  <!-- line-height de 180% -->
-
-  <p
-    class="text-[14px] leading-[1.8] mx-auto w-[320px] md:w-[480px]"
-  >
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and
-    relax because we’ll give you a truly out of this world experience!
-  </p>
-
-  <!-- Contenedor principal -->
-  <div
-    class="group relative flex justify-center items-center w-40 h-40 mx-auto mt-28"
-  >
-    <!-- Círculo de fondo (aura animada) -->
-    <div
-      class="absolute w-20 h-20 p-40 rounded-full bg-white/0 transition-all duration-300 ease-in-out group-hover:bg-white/5 group-hover:scale-100 md:w-24 md:h-24 md:p-24 md:group-hover:scale-200 "
-    ></div>
-    <!-- Botón -->
-    <div
-      class="relative z-10 bg-white text-black rounded-full w-20 h-20 p-20 flex items-center justify-center cursor-pointer md:w-24 md:h-24 md:p-24"
-      routerLink="/destination"
+<div class="text-center mt-5 md:mt-20 flex flex-col items-center justify-center lg:h-full lg:flex-row lg:pt-20">
+  <div class="flex-1 flex flex-col justify-start items-start">
+    <h2
+      class="uppercase font-barlow-condensed leading-[33.6px] mx-auto tracking-[6px] [4px] text-[15px] md:text-[20px] lg:text-left lg:ml-40 lg:text-2xl"
     >
-      <p class="text-[16px] font-bellefair uppercase text-black/90 md:text-[25px]">Explore</p>
-    </div>
+      So, you want to travel to
+    </h2>
+    <h1 class="text-white text-[80px] uppercase font-bellefair mx-auto  md:text-[120px] lg:text-[150px] lg:text-left lg:ml-44">
+      Space
+    </h1>
+
+    <!-- line-height de 180% -->
+
+    <p class="text-[14px] leading-[1.8] w-[320px] md:w-[480px] lg:text-left lg:ml-44">
+      Let’s face it; if you want to go to space, you might as well genuinely go
+      to outer space and not hover kind of on the edge of it. Well sit back, and
+      relax because we’ll give you a truly out of this world experience!
+    </p>
   </div>
 
-
-
+  <div class="flex-1">
+    <!-- Contenedor principal -->
+    <div
+      class="group relative flex justify-center items-center w-40 h-40 mx-auto mt-28"
+    >
+      <!-- Círculo de fondo (aura animada) -->
+      <div
+        class="absolute w-20 h-20 p-40 rounded-full bg-white/0 transition-all duration-300 ease-in-out group-hover:bg-white/5 group-hover:scale-100 md:w-24 md:h-24 md:p-24 md:group-hover:scale-200"
+      ></div>
+      <!-- Botón -->
+      <div
+        class="relative z-10 bg-white text-black rounded-full w-20 h-20 p-20 flex items-center justify-center cursor-pointer md:w-24 md:h-24 md:p-24"
+        routerLink="/destination"
+      >
+        <p
+          class="text-[16px] font-bellefair uppercase text-black/90 md:text-[25px]"
+        >
+          Explore
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
