change location img

--- a/space-tourism-website/src/app/shared/ui/header/header.component.html
+++ b/space-tourism-website/src/app/shared/ui/header/header.component.html
@@ -1,6 +1,7 @@
 <header class="flex justify-between items-center text-white px-6 py-4 w-full">
   <div class="cursor-pointer md:p-3" routerLink="/home">
-    <img src="/assets/shared/logo.svg" alt="Space Tourism Logo" />
+
+    <img src="assets/shared/logo.svg" alt="Space Tourism Logo" />
   </div>
 
   <div class="hidden lg:flex flex-1 border border-white/40   ">
